--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather-bot",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "a simple weather bot for your Discord Server.",
   "main": "index.js",
   "scripts": {
@@ -13,10 +13,10 @@
     "weather"
   ],
   "author": "Alexander Surmann, aka Susurmi",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.2.2",
-    "discord.js": "^14.7.1",
+    "axios": "^1.3.5",
+    "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "moment": "^2.29.4"
   }
