--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "weather-bot",
-  "version": "1.0.1",
-  "description": "a simple weather bot for your Discord Server.",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "keywords": [
-    "discord",
-    "bot",
-    "weather"
-  ],
-  "author": "Alexander Surmann, aka Susurmi",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^1.3.5",
-    "discord.js": "^14.9.0",
-    "dotenv": "^16.0.3",
-    "moment": "^2.29.4"
-  }
+	"name": "weather-bot",
+	"version": "1.0.1",
+	"description": "a simple weather bot for your Discord Server.",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js",
+		"lint": "eslint ."
+	},
+	"keywords": [
+		"discord",
+		"bot",
+		"weather"
+	],
+	"author": "Alexander Surmann, aka Susurmi",
+	"license": "MIT",
+	"dependencies": {
+		"axios": "^1.5.0",
+		"discord.js": "^14.13.0",
+		"dotenv": "^16.3.1",
+		"moment": "^2.29.4"
+	},
+	"devDependencies": {
+		"eslint": "^8.48.0",
+		"eslint-plugin-jsdoc": "^46.5.1",
+		"nodemon": "^3.0.1"
+	}
 }
