--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
 		"ecmaVersion": 2021
 	},
 	"rules": {
+		"jsdoc/require-returns": 0,
 		"arrow-spacing": ["warn", { "before": true, "after": true }],
 		"brace-style": ["error", "1tbs", { "allowSingleLine": true }],
 		"comma-dangle": ["error", "always-multiline"],
