--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,11 @@
 		"es6": true
 	},
 	"parserOptions": {
-		"ecmaVersion": 2021
+		"ecmaVersion": 2022
 	},
 	"rules": {
-		"jsdoc/require-returns": 0,
+		"jsdoc/require-param-description": 0,
+		"jsdoc/require-returns-description": 0,
 		"arrow-spacing": ["warn", { "before": true, "after": true }],
 		"brace-style": ["error", "1tbs", { "allowSingleLine": true }],
 		"comma-dangle": ["error", "always-multiline"],
